--- a/weather-app/src/styles/WeatherApp.module.css
+++ b/weather-app/src/styles/WeatherApp.module.css
@@ -28,7 +28,7 @@
   flex-grow: 1;
   min-width: 0;
   background-color: transparent;
-  color: var(--text-clr);
+  color: hsl(60, 100%, 70%);
   padding: 0 1.5rem;
 }
 
