docs(style): change comment for loading spinner

--- a/weather-app/src/styles/WeatherApp.module.css
+++ b/weather-app/src/styles/WeatherApp.module.css
@@ -43,7 +43,7 @@
   cursor: pointer;
 }
 
-/* -------- LOADING STYLE -------- */
+/* -------- LOADING SPINNER -------- */
 
 .spinnerContainer {
   width: 50px;
