--- a/weather-app/src/styles/WeatherApp.module.css
+++ b/weather-app/src/styles/WeatherApp.module.css
@@ -1,6 +1,8 @@
 :root {
   --text-clr: hsl(180, 100%, 60%);
   --space-m: 1rem;
+  --space-l: 1.5rem;
+  --space-xl: 2rem;
 }
 
 /* -------- APP TITLE -------- */
@@ -30,7 +32,7 @@
   min-width: 0;
   background-color: transparent;
   color: hsl(60, 100%, 70%);
-  padding: 0 1.5rem;
+  padding: 0 var(--space-l);
 }
 
 /* -------- SEARCH BUTTON -------- */
@@ -51,7 +53,7 @@
   height: 50px;
   border: 6px solid hsla(180, 100%, 60%, 0.1);
   border-radius: 50%;
-  margin-top: 2rem;
+  margin-top: var(--space-xl);
   position: relative;
 }
 
@@ -78,7 +80,7 @@
 /* -------- WEATHER CARD -------- */
 
 .card {
-  margin-top: 2rem;
+  margin-top: var(--space-xl);
   background-image: linear-gradient(
     to bottom,
     hsl(240, 100%, 70%),
@@ -103,7 +105,7 @@
 }
 
 .card > h2 {
-  margin-top: 1rem;
+  margin-top: var(--space-m);
 }
 
 .card > p {
