--- a/weather-app/src/styles/WeatherApp.module.css
+++ b/weather-app/src/styles/WeatherApp.module.css
@@ -10,6 +10,8 @@
   --space-m: 1rem;
   --space-l: 1.5rem;
   --space-xl: 2rem;
+
+  --spinner-size: 50px;
 }
 
 /* -------- APP TITLE -------- */
@@ -56,8 +58,8 @@
 /* -------- LOADING SPINNER -------- */
 
 .spinnerContainer {
-  width: 50px;
-  height: 50px;
+  width: var(--spinner-size);
+  height: var(--spinner-size);
   border: 6px solid hsla(180, 100%, 60%, 0.1);
   border-radius: 50%;
   margin-top: var(--space-xl);
@@ -68,8 +70,8 @@
   position: absolute;
   top: -6px;
   left: -6px;
-  width: 50px;
-  height: 50px;
+  width: var(--spinner-size);
+  height: var(--spinner-size);
   border: inherit;
   border-top-color: var(--text-clr);
   border-radius: 50%;
@@ -93,7 +95,7 @@
     var(--gradient-clr-blue),
     var(--gradient-clr-orange)
   );
-  padding: 1.5rem 2rem;
+  padding: var(--space-l) var(--space-xl);
   border-radius: 25px;
   box-shadow: 0 0 15px var(--shadow-clr);
   line-height: 1.7;
