--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -24,7 +24,7 @@ input,
 button {
   border: none;
   outline: none;
-  font-size: 1.05rem;
+  font-size: clamp(0.95rem, 0.8923rem + 0.1848vw, 1.05rem);
   font-family: inherit;
 }
 
